[package]
name = "envopt"
version = "0.0.0"
authors = ["Zoran Zaric <zz@zoranzaric.de>"]
edition = "2018"
description = "Parse environment variables by defining a struct."
categories = ["command-line-interface"]

readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/zoranzaric/envopt"
repository = "https://github.com/zoranzaric/envopt.git"

[dependencies]
envopt-derive = { path = "envopt-derive", version = "0.0.0" }

[workspace]
